--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "mongodb": "^3.6.5",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
