--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.6.5",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "uuid": "^8.3.2"
